# controllers/ReadersController.ts
@@ -43,36 +43,42 @@ const getReaders = async (req: Request, res: Response, next: NextFunction) => {
 const createReaders = async (req: Request, res: Response, next: NextFunction) => {
   /**
      * #swagger.tags = ['讀卡機']
-     * #swagger.description = '新增讀卡機'
+     * #swagger.description = '讀卡機新增'
      * #swagger.security = [{
         token: []
        }]
-    * #swagger.parameters['header'] = {
-        in: 'header',
-        name: 'authorization',
-        description: 'Bearer token',
+     * #swagger.parameters['body'] = {
+        in: 'body',
+        description: '讀卡機新增',
+        type: 'object',
         required: true,
-        type: 'string'
-      }
+        schema: {
+          name: '預設讀卡機',
+          connection: {
+            ip: "192.168.100.78",
+            port: 4444
+          }
+        }
+       }
      * #swagger.responses[200] = {
-        description: '登入成功',
+        description: '讀卡機新增成功',
         schema: {
           "status": "success",
-          "message": "登入成功"
+          "message": "讀卡機新增成功",
         },
        }
-     * #swagger.responses[401] = {
-        description: '登入失敗',
+     * #swagger.responses[400] = {
+        description: '讀卡機新增失敗',
         schema: {
           "status": "error",
-          "message": "身分驗證失敗，請重新登入"
+          "message": "讀卡機新增"
         },
        }
      *
      */
   try {
-    const { labelName } = req.body
-    const readers = new ReadersModel({ labelName })
+    const { name, connection } = req.body
+    const readers = new ReadersModel({ name, connection })
     await readers.save()
     res.status(201).json({ code: 'success', data: readers })
   } catch (err) {
@@ -154,11 +160,11 @@ const deleteReaders = async (req: Request, res: Response, next: NextFunction) =>
      */
   try {
     const { id } = req.params
-    const deletedHouseSymptoms = await ReadersModel.findByIdAndDelete(id)
-    if (!deletedHouseSymptoms) {
+    const deletedReader = await ReadersModel.findByIdAndDelete(id)
+    if (!deletedReader) {
       return res.status(404).json({ code: 'error', msg: '找不到此讀卡機' })
     }
-    res.status(200).json({ code: 'success', data: deletedHouseSymptoms })
+    res.status(200).json({ code: 'success', data: deletedReader })
   } catch (err) {
     next(err)
   }
